--- a/悦悦专属.html
+++ b/悦悦专属.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>温馨提示</title>
+    <title>悦悦专属</title>
     <style>
         /* 基础窗口样式 */
         .tip-window {
@@ -149,4 +149,5 @@
         main();
     </script>
 </body>
+
 </html>
